# template-project-cpp

./: .editorconfig  .envrc  .gitignore  Box_8hpp_source.html  CMakeLists.txt  CMakePresets.json  Doxyfile.in  EvaluatorExpr_8cpp_source.html  EvaluatorExpr_8hpp_source.html  Exceptions_8hpp_source.html  Expr_8cpp_source.html  Expr_8hpp_source.html  Function_8hpp_source.html  Interpreter_8cpp_source.html  Interpreter_8hpp_source.html  LICENSE  Object_8cpp_source.html  Object_8hpp_source.html  Parser_8cpp_source.html  Parser_8hpp_source.html  PrinterExpr_8cpp_source.html  PrinterExpr_8hpp_source.html  README.md  Scanner_8cpp_source.html  Scanner_8hpp_source.html  TokenType_8hpp_source.html  Token_8hpp_source.html  _box_8hpp_source.html  _evaluator_expr_8cpp_source.html  _evaluator_expr_8hpp_source.html  _exceptions_8hpp_source.html  _expr_8cpp_source.html  _expr_8hpp_source.html  _function_8hpp_source.html  _interpreter_8cpp_source.html  _interpreter_8hpp_source.html  _object_8cpp_source.html  _object_8hpp_source.html  _parser_8cpp_source.html  _parser_8hpp_source.html  (+297 more)
.github/workflows/: main.yml
.nvim/: local.vim
doc/: debug.md  dev.md
inc/: Exceptions.hpp  Function.hpp  Interpreter.hpp  Object.hpp
inc/parsing/: Box.hpp  Expr.hpp  Parser.hpp  Scanner.hpp  Token.hpp  TokenType.hpp
inc/visitors/: EvaluatorExpr.hpp  PrinterExpr.hpp  helpers.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+26 more)
src/: Interpreter.cpp  Object.cpp  main.cpp
src/parsing/: Expr.cpp  Parser.cpp  Scanner.cpp
src/visitors/: EvaluatorExpr.cpp  PrinterExpr.cpp
test/: mockup.hpp
test/tpcpp-interpreter/: TestInterpreter.cpp  TestParser.cpp  TestScanner.cpp
test/tpcpp-object/: TestObjectBinaryArithmetics.cpp  TestObjectBinaryComparisons.cpp  TestObjectPredicates.cpp  TestObjectTypeConversion.cpp  TestObjectUnary.cpp
tools/: configure-pre-commit.ps1  gen-compdb.ps1  install-deps.ps1  strip-flags.py
